[package]
name = "poodg"
version = "0.2.0"
edition = "2021"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[dependencies]
tinybmp = "0.5.0"
embedded-graphics = "0.8.1"
fugit = "0.3.7"
once_cell = { version = "1.19.0", features = ["alloc", "race"], optional = true }
rand = { version = "0.8.5", features = ["alloc",   "small_rng"], default-features = false }
itoa = "1.0.11"
nalgebra = {version = "0.33.0", default-features=false}
web-time = "1.1.0"

[target.'cfg(target_os = "none")'.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"

rp-pico = "0.9.0"
rp2040-hal = {version = "0.10.2",  features = ["rt", "critical-section-impl", "rom-v2-intrinsics"]}

ssd1309 = "0.4.0"
display-interface-i2c = "0.4.0" 

defmt = "0.3.8"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

critical-section = {version = "1.1.3"}
libm = "0.2.8"
embedded-alloc = "0.6"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.77"
embedded-graphics-web-simulator = { version = "0.4.0" }
console_error_panic_hook = "0.1.5"
getrandom = { version = "0.2", features = ["js"] }
cargo-run-wasm = "0.3.0"
wasm-timer = "0.2.5"
wasm-bindgen-futures = "0.4.43"
once_cell = { version = "1.19.0", features = ["alloc", "race"] }


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'Event',
  'MouseEvent',
  'WheelEvent',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
]

[target.'cfg(target_arch = "x86_64")'.dependencies]
embedded-graphics-simulator = {version = "0.5.0"}
once_cell = { version = "1.19.0", features = ["alloc", "race"] }
